--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ Etapa1/lex.yy.c
 Etapa1/etapa1
 Etapa2/etapa2
 Etapa2/lex.yy.c
+Etapa2/lex.yy.o
 Etapa2/parser.tab.c
 Etapa2/parser.tab.h
+Etapa2/parser.tab.o
