add 'lexical' make option to allow debugging of lexical analyser

--- a/Etapa2/Makefile
+++ b/Etapa2/Makefile
@@ -6,3 +6,13 @@ etapa2: scanner.l main.c
 
 clean:
 	rm -f *.tab.c *.tab.h *.yy.c *.o etapa2
+
+# temp option to allow debugging of lexical analyser
+lexical: scanner.l ../Etapa1/main.c
+	cp scanner.l tmpscanner.l
+	sed -i -e "s/parser.tab.h/..\/Etapa1\/tokens.h/" tmpscanner.l
+	flex -o lex.yy.c tmpscanner.l
+	gcc ../Etapa1/main.c lex.yy.c -o lexical -lfl
+
+cleanlexical:
+	rm -f tmpscanner.l lexical
