--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Etapa2/parser.tab.c
 Etapa2/parser.tab.h
 Etapa2/parser.tab.o
 Etapa2/parser.output
+Etapa3/etapa3
+Etapa3/lex.yy.c
+Etapa3/lex.yy.o
+Etapa3/parser.tab.c
+Etapa3/parser.tab.h
+Etapa3/parser.tab.o
+Etapa3/parser.output
+Etapa3/AST.o
