fix makefile. update gitignore

--- a/Etapa4/Makefile
+++ b/Etapa4/Makefile
@@ -1,5 +1,5 @@
 etapa4: parser.y scanner.l main.c src/AST.cpp src/Scope.cpp
-	rm -r build
+	if [ -d build ]; then rm -r build; fi
 	mkdir build
 	bison -v -d parser.y -b build/parser
 	flex -o build/lex.yy.c scanner.l
