arithmetic expressions ok

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-Etapa1/lex.yy.c
-Etapa1/etapa1
-Etapa2/etapa2
-Etapa2/lex.yy.c
-Etapa2/lex.yy.o
-Etapa2/parser.tab.c
-Etapa2/parser.tab.h
-Etapa2/parser.tab.o
-Etapa2/parser.output
-Etapa3/etapa3
-Etapa3/lex.yy.c
-Etapa3/lex.yy.o
-Etapa3/parser.tab.c
-Etapa3/parser.tab.h
-Etapa3/parser.tab.o
-Etapa3/parser.output
-Etapa3/AST.o
-Etapa4/build
-Etapa4/etapa4
+Etapa*/etapa*
+Etapa*/lex.yy.c
+Etapa*/lex.yy.o
+Etapa*/parser.tab.c
+Etapa*/parser.tab.h
+Etapa*/parser.tab.o
+Etapa*/parser.output
+Etapa*/lex.yy.c
+Etapa*/lex.yy.o
+Etapa*/AST.o
+Etapa*/build
+
