update submitted file etapa5.tgz

--- a/Etapa5/Makefile
+++ b/Etapa5/Makefile
@@ -3,7 +3,7 @@ etapa5: parser.y scanner.l main.c src/*.cpp
 	mkdir build
 	bison -v -d parser.y -b build/parser
 	flex -o build/lex.yy.c scanner.l
-	g++ -g -ggdb3 build/*.c src/*.cpp main.c -o etapa5 -lfl
+	g++ build/*.c src/*.cpp main.c -o etapa5 -lfl
 
 clean:
 	rm -rf build etapa5
