test control flow in iloc code (seems ok)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Etapa*/build
 Etapa6/tst/our_tests/testing
 Etapa6/tst/our_tests/testing_gcc.s
 Etapa6/tst/our_tests/testing_our.s
+Etapa6/tst/our_tests/testing.iloc
